--- a/roster.html
+++ b/roster.html
@@ -182,16 +182,13 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
              Pending Confirmation
              Final
-          <b><mark>>> COVID timetable <<</mark></b> 
+             COVID timetable 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sun 06/06, 20:02)   COVID timetable start !!
-                                     CP Closed until further notice, maybe 
-                                     the following week. Keep an eye on the 
-                                     news and we will contact you asap!</span>
+<b>Changelog</b> -  #1 (Sat 12/06, 11:11)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -347,26 +344,28 @@ Sean 8
 
 
 -->
+Mon - Fri  
+      ~ b   |LC 0700-0730 (0.5)
+            |CP 0730-1430 (7.0) 
+
 |==========================================================================|
-| For week starting    Mon   07/06/2021                                    |
+| For week starting    Mon   14/06/2021                                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
-| a    0730-1530|      /          /          /          /          /       |
-| b    0630-1430|8.0~  /          /          /          /          /       |
+| a    0730-1530|      /          Nere       Nere       Nere       Nere    |
+| b    0700-1430|7.5~  /          Sean                                     |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1500|      Nere       Nere       Nere       Nere       Nere    |
+| d    0630-1500|      /          Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   /          Madi       Madi       Madi       Bea     |
 |                                                                          |
 |==========================================================================|
-<!--Mon - Fri  
-      ~ b   |LC 0700-0730 (0.5)
-            |CP 0730-1430 (7.0) 
 
+<!--
 Mon   ^ Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
       & Millie  |LC 0700-0730 (0.5)
