--- a/roster.html
+++ b/roster.html
@@ -344,19 +344,22 @@ Sean 8
 
 
 -->
+Bea: Need to finish 14:30 on Tue 15, Wed 16
+Vechy: Away Wed 16, Mon 21
+
 Mon - Fri  
       ~ b   |LC 0700-0730 (0.5)
             |CP 0730-1430 (7.0) 
 
 |==========================================================================|
-| For week starting    Mon   14/06/2021                                    |
+| For week starting    Mon        14/06/2021                               |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Sean                                     |
+| b    0700-1430|7.5~  /          Sean       Pla        Pla        Vechy   |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
@@ -365,6 +368,22 @@ Mon - Fri
 |                                                                          |
 |==========================================================================|
 
+|==========================================================================|
+| For week starting    Mon        21/06/2021      DRAFT                    |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0700-1430|7.5~  Pla        Sean       Pla        Vechy      Vechy   |
+| c    1030-1530|5.0   /          /          /          /          /       |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Bea     |
+|                                                                          |
+|==========================================================================|
 <!--
 Mon   ^ Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
