--- a/roster.html
+++ b/roster.html
@@ -188,7 +188,8 @@ B3 ROSTER
              COVID timetable 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 12/06, 11:11)   Draft #1</span>
+<b>Changelog</b> -  #2 (Sat 12/06, 16:24)   Draft #2
+             #1 (Sat 12/06, 11:11)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -344,8 +345,10 @@ Sean 8
 
 
 -->
-Bea: Need to finish 14:30 on Tue 15, Wed 16
+Pla: Mon and Wednesday only
 Vechy: Away Wed 16, Mon 21
+Bea: Need to finish 14:30 on Tue 15, Wed 16
+
 
 Mon - Fri  
       ~ b   |LC 0700-0730 (0.5)
@@ -359,7 +362,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Sean       Pla        Pla        Vechy   |
+| b    0700-1430|7.5~  /          Sean       Pla        Vechy      Vechy   |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
