--- a/roster.html
+++ b/roster.html
@@ -188,7 +188,8 @@ B3 ROSTER
              COVID timetable 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sat 12/06, 16:24)   Draft #2
+<b>Changelog</b> -  #3 (Sun 13/06, 13:55)   Draft #3
+             #2 (Sat 12/06, 16:24)   Draft #2
              #1 (Sat 12/06, 11:11)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -354,6 +355,9 @@ Mon - Fri
       ~ b   |LC 0700-0730 (0.5)
             |CP 0730-1430 (7.0) 
 
+Mon - Fri
+      +     |LC 0700-0730 (0.5)
+            |CP 0730-1530 (8.0)
 |==========================================================================|
 | For week starting    Mon        14/06/2021                               |
 |==========================================================================|
@@ -362,12 +366,12 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Sean       Pla        Vechy      Vechy   |
+| b    0700-1430|7.5~  /          Sean+      Pla+       Vechy+     Vechy+  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      /          Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   /          Madi       Madi       Madi       Bea     |
+| e    0630-1500|8.5   /          Madi       Madi       Madi       Bea     |
 |                                                                          |
 |==========================================================================|
 
@@ -379,12 +383,12 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  Pla        Sean       Pla        Vechy      Vechy   |
+| b    0700-1430|7.5~  Pla+       Sean+      Pla+       Vechy+     Vechy+  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Bea     |
+| e    0630-1500|8.5   Bea        Madi       Madi       Madi       Bea     |
 |                                                                          |
 |==========================================================================|
 <!--
