--- a/roster.html
+++ b/roster.html
@@ -188,7 +188,9 @@ B3 ROSTER
              COVID timetable 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 13/06, 13:55)   Draft #3
+<b>Changelog</b> -  #4 (Mon 11/06, 11:59)   [Pending Confirmation]
+                                     Draft #4
+             #3 (Sun 13/06, 13:55)   Draft #3
              #2 (Sat 12/06, 16:24)   Draft #2
              #1 (Sat 12/06, 11:11)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -346,7 +348,7 @@ Sean 8
 
 
 -->
-Pla: Mon and Wednesday only
+Pla: Monday and Wednesday only
 Vechy: Away Wed 16, Mon 21
 Bea: Need to finish 14:30 on Tue 15, Wed 16
 
@@ -366,7 +368,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Sean+      Pla+       Vechy+     Vechy+  |
+| b    0700-1430|7.5~  /          Vechy+     Pla+       Bea+      Vechy+  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
