--- a/roster.html
+++ b/roster.html
@@ -182,8 +182,8 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft <<</mark></b>
-             Pending Confirmation
+<b>Status</b> -     Draft
+          <b><mark>>> Pending Confirmation <<</mark></b>
              Final
              COVID timetable 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
@@ -368,7 +368,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Vechy+     Pla+       Bea+      Vechy+  |
+| b    0700-1430|7.5~  /          Vechy+     Pla+       Bea+       Vechy+  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
