--- a/roster.html
+++ b/roster.html
@@ -183,12 +183,13 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              COVID timetable 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Mon 11/06, 11:59)   [Pending Confirmation]
+<b>Changelog</b> -  #5 (Mon 11/06, 13:13)   [Final]<span id = "paraChangelog" style = "display:none">
+             #4 (Mon 11/06, 11:59)   [Pending Confirmation]
                                      Draft #4
              #3 (Sun 13/06, 13:55)   Draft #3
              #2 (Sat 12/06, 16:24)   Draft #2
@@ -347,18 +348,18 @@ Bea 31
 Sean 8
 
 
+Mon - Fri  
+      ~ b   |LC 0700-0730 (0.5)
+            |CP 0730-1430 (7.0) 
+
+
 -->
 Pla: Monday and Wednesday only
 Vechy: Away Wed 16, Mon 21
 Bea: Need to finish 14:30 on Tue 15, Wed 16
 
-
-Mon - Fri  
-      ~ b   |LC 0700-0730 (0.5)
-            |CP 0730-1430 (7.0) 
-
 Mon - Fri
-      +     |LC 0700-0730 (0.5)
+      U+1F308     |LC 0700-0730 (0.5)
             |CP 0730-1530 (8.0)
 |==========================================================================|
 | For week starting    Mon        14/06/2021                               |
@@ -368,7 +369,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  /          Vechy+     Pla+       Bea+       Vechy+  |
+| b    0700-1430|7.5   /          VechyU+1F308     PlaU+1F308       BeaU+1F308       VechyU+1F308  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
@@ -385,7 +386,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  Pla+       Sean+      Pla+       Vechy+     Vechy+  |
+| b    0700-1430|7.5   Pla+       Sean+      Pla+       Vechy+     Vechy+  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
