--- a/roster.html
+++ b/roster.html
@@ -176,6 +176,16 @@ alt="shopify traffic stats"></a></div></noscript>
 <!-- hazel/brown: #f8c89f , #c5c1a4-->
 <!-- light ORANGE: #FF9933 GOLD: ffd700-->
 <!--light pink: #ffc0cb -->
+
+<!-- rainbow: U+1F308 -->
+<!-- -->
+<!-- -->
+<!-- -->
+<!-- -->
+<!-- -->
+<!-- -->
+<!-- -->
+<!-- -->
 <pre width="10"><span id = "expandAll" style = "cursor:hand;color:royalblue" onclick = "expandAll();">[+ all]</span>
 <span id = "contractAll" style = "cursor:hand;color:royalblue" onclick = "contractAll();">[Close all]</span>
 <div>
@@ -369,7 +379,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   /          VechyU+1F308     PlaU+1F308       BeaU+1F308       VechyU+1F308  |
+| b    0700-1430|7.5   /          Vechy&#1F308     PlaU+1F308       BeaU+1F308       VechyU+1F308  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
