--- a/roster.html
+++ b/roster.html
@@ -186,7 +186,7 @@ alt="shopify traffic stats"></a></div></noscript>
 <!-- -->
 <!-- -->
 <!-- -->
-&#1F308
+&#x1F308
 <pre width="10"><span id = "expandAll" style = "cursor:hand;color:royalblue" onclick = "expandAll();">[+ all]</span>
 <span id = "contractAll" style = "cursor:hand;color:royalblue" onclick = "contractAll();">[Close all]</span>
 <div>
@@ -380,7 +380,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   /          Vechy&#1F308     PlaU+1F308       BeaU+1F308       VechyU+1F308  |
+| b    0700-1430|7.5   /          Vechy&#x1F308     PlaU+1F308       BeaU+1F308       VechyU+1F308  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
