--- a/roster.html
+++ b/roster.html
@@ -186,7 +186,6 @@ alt="shopify traffic stats"></a></div></noscript>
 <!-- -->
 <!-- -->
 <!-- -->
-&#x1F308
 <pre width="10"><span id = "expandAll" style = "cursor:hand;color:royalblue" onclick = "expandAll();">[+ all]</span>
 <span id = "contractAll" style = "cursor:hand;color:royalblue" onclick = "contractAll();">[Close all]</span>
 <div>
@@ -370,7 +369,7 @@ Vechy: Away Wed 16, Mon 21
 Bea: Need to finish 14:30 on Tue 15, Wed 16
 
 Mon - Fri
-      U+1F308     |LC 0700-0730 (0.5)
+      &#x1F308     |LC 0700-0730 (0.5)
             |CP 0730-1530 (8.0)
 |==========================================================================|
 | For week starting    Mon        14/06/2021                               |
@@ -380,7 +379,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   /          Vechy&#x1F308     PlaU+1F308       BeaU+1F308       VechyU+1F308  |
+| b    0700-1430|7.5   /          Vechy&#x1F308     Pla&#x1F308       Bea&#x1F308       Vechy&#x1F308  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
