--- a/roster.html
+++ b/roster.html
@@ -369,7 +369,7 @@ Vechy: Away Wed 16, Mon 21
 Bea: Need to finish 14:30 on Tue 15, Wed 16
 
 Mon - Fri
-      &#x1F308     |LC 0700-0730 (0.5)
+      🏳️‍🌈    |LC 0700-0730 (0.5)
             |CP 0730-1530 (8.0)
 |==========================================================================|
 | For week starting    Mon        14/06/2021                               |
@@ -379,7 +379,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      /          Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   /          Vechy&#x1F308     Pla&#x1F308       Bea&#x1F308       Vechy&#x1F308  |
+| b    0700-1430|7.5   /          Vechy🏳️‍🌈    Pla🏳️‍🌈       Bea🏳️‍🌈      Vechy🏳️‍🌈 |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
