--- a/roster.html
+++ b/roster.html
@@ -198,7 +198,7 @@ B3 ROSTER
              COVID timetable 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Mon 11/06, 13:13)   [Final] &#2705<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #5 (Mon 11/06, 13:13)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
              #4 (Mon 11/06, 11:59)   [Pending Confirmation]
                                      Draft #4
              #3 (Sun 13/06, 13:55)   Draft #3
