--- a/roster.html
+++ b/roster.html
@@ -389,7 +389,7 @@ Mon - Fri
 |==========================================================================|
 
 |==========================================================================|
-| For week starting    Mon        21/06/2021      DRAFT &#x1F6A7                |
+| For week starting    Mon        21/06/2021      DRAFT &#x1F6A7&#x1F6A7&#x1F6A7               |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
