--- a/roster.html
+++ b/roster.html
@@ -178,8 +178,8 @@ alt="shopify traffic stats"></a></div></noscript>
 <!--light pink: #ffc0cb -->
 
 <!-- rainbow: U+1F308 -->
-<!-- -->
-<!-- -->
+<!-- construction barrier: &#x1F6A7 -->
+<!-- bellhop bell: &#x1F6CE -->
 <!-- -->
 <!-- -->
 <!-- -->
@@ -199,7 +199,7 @@ B3 ROSTER
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
 <b>Changelog</b> -  #5 (Mon 11/06, 13:13)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
-             #4 (Mon 11/06, 11:59)   [Pending Confirmation]
+             #4 (Mon 11/06, 11:59)   [Pending Confirmation] &#x1F6CE
                                      Draft #4
              #3 (Sun 13/06, 13:55)   Draft #3
              #2 (Sat 12/06, 16:24)   Draft #2
@@ -389,7 +389,7 @@ Mon - Fri
 |==========================================================================|
 
 |==========================================================================|
-| For week starting    Mon        21/06/2021      DRAFT &#x1F6A7&#x1F6A7&#x1F6A7             |
+| For week starting    Mon        21/06/2021      DRAFT                    |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
