--- a/roster.html
+++ b/roster.html
@@ -198,8 +198,8 @@ B3 ROSTER
              COVID timetable 
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Mon 11/06, 13:13)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
-             #4 (Mon 11/06, 11:59)   [Pending Confirmation] &#x1F6CE
+<b>Changelog</b> -  #5 (Mon 11/06, 13:13)   &#x2705 [Final] <span id = "paraChangelog" style = "display:none">
+             #4 (Mon 11/06, 11:59)   &#x1F6CE [Pending Confirmation] 
                                      Draft #4
              #3 (Sun 13/06, 13:55)   Draft #3
              #2 (Sat 12/06, 16:24)   Draft #2
