--- a/roster.html
+++ b/roster.html
@@ -196,9 +196,9 @@ B3 ROSTER
           <b><mark>>> Pending Confirmation<<</mark></b>
              Final 
              COVID timetable 
-             <!-- [Final] &#x2705 -->
-             <!-- [Pending Confirmation] &#x1F6CE -->
-             <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
+             <!-- [Final] &#x2705
+                  [Pending Confirmation] &#x1F6CE
+                  ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
 <b>Changelog</b> -  #2 (Sun 20/06, 12:23)   [Pending Confirmation] &#x1F6CE
              #1 (Sat 19/06, 08:01)   Draft #1</span>
