--- a/roster.html
+++ b/roster.html
@@ -376,7 +376,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Pla=       Vechy=     Pla=       Bea=       Vechy=  |
+| b    0700-1430|7.5   Pla=       Sean =     Pla=       Bea=       Vechy=  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
