--- a/roster.html
+++ b/roster.html
@@ -376,7 +376,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Pla=       Sean =     Pla=       Bea=       Vechy=  |
+| b    0700-1430|7.5   Pla=       Sean=      Pla=       Bea=       Vechy=  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
@@ -385,6 +385,22 @@ Mon - Fri
 |                                                                          |
 |==========================================================================|
 
+|==========================================================================|
+| For week starting    Mon        26/06/2021    DRAFT                      |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0700-1430|7.5   Pla=       Sean=      Vechy=     Bea=       Vechy=  |
+| c    1030-1530|5.0   /          /          /          /          /       |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1500|8.5   Bea        Madi       Madi       Madi       Bea     |
+|                                                                          |
+|==========================================================================|
 <!--
 Mon   ^ Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
