--- a/roster.html
+++ b/roster.html
@@ -200,7 +200,8 @@ B3 ROSTER
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 20/06, 12:23)   [Pending Confirmation] &#x1F6CE
+<b>Changelog</b> -  #3 (Sun 20/06, 13:08)   Draft #2
+             #2 (Sun 20/06, 12:23)   [Pending Confirmation] &#x1F6CE
              #1 (Sat 19/06, 08:01)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
