--- a/roster.html
+++ b/roster.html
@@ -193,8 +193,8 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation<<</mark></b>
-             Final 
+             Pending Confirmation
+          <b><mark>>> Final<<</mark></b> 
              COVID timetable 
              <!-- [Final] &#x2705
                   [Pending Confirmation] &#x1F6CE
