--- a/roster.html
+++ b/roster.html
@@ -365,7 +365,7 @@ Mon - Fri
 
 -->
 Pla: Monday and Wednesday only
-Vechy: Mon 21
+Vechy: Away Mon 21
 
 Mon - Fri
       =     |LC 0700-0730 (0.5)
