--- a/roster.html
+++ b/roster.html
@@ -198,8 +198,8 @@ B3 ROSTER
              COVID timetable 
              <!-- [Final] &#x2705
                   [Pending Confirmation] &#x1F6CE
-                  ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
-<!-- <span id = "paraChangelog" style = "display:none">    -->
+                  ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
+     <span id = "paraChangelog" style = "display:none">    -->
 <b>Changelog</b> -  #4 (Sun 20/06, 16:37)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
              #3 (Sun 20/06, 13:08)   Draft #2
              #2 (Sun 20/06, 12:23)   [Pending Confirmation] &#x1F6CE
