--- a/roster.html
+++ b/roster.html
@@ -192,18 +192,15 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
+<b>Status</b> -  <b><mark>>> Draft <<</mark></b> 
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b> 
+             Final
              COVID timetable 
              <!-- [Final] &#x2705
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 20/06, 16:37)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
-             #3 (Sun 20/06, 13:08)   Draft #2
-             #2 (Sun 20/06, 12:23)   [Pending Confirmation] &#x1F6CE
-             #1 (Sat 19/06, 08:01)   Draft #1</span>
+<b>Changelog</b> -  #1 (Sat 26/06, 08:41)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -365,30 +362,12 @@ Mon - Fri
 
 -->
 Pla: Monday and Wednesday only
-Vechy: Away Mon 21
 
 Mon - Fri
           = |LC 0700-0730 (0.5)
             |CP 0730-1530 (8.0)
 |==========================================================================|
-| For week starting    Mon        21/06/2021                               |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Pla=       Sean=      Pla=       Bea=       Vechy=  |
-| c    1030-1530|5.0   /          /          /          /          /       |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1500|8.5   Bea        Madi       Madi       Madi       Bea     |
-|                                                                          |
-|==========================================================================|
-
-|==========================================================================|
-| For week starting    Mon        26/06/2021    DRAFT                      |
+| For week starting    Mon        26/06/2021                               |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
@@ -403,6 +382,24 @@ Mon - Fri
 | e    0630-1500|8.5   Bea        Madi       Madi       Madi       Bea     |
 |                                                                          |
 |==========================================================================|
+
+|==========================================================================|
+| For week starting    Mon        05/07/2021    DRAFT                      |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0700-1430|7.5   Pla=       Sean=      Vechy=     Bea=       Vechy=  |
+| c    1030-1530|5.0   /          /          /          /          /       |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1500|8.5   Bea        Madi       Madi       Madi       Bea     |
+|                                                                          |
+|==========================================================================|
+
 <!--
 Mon   ^ Sean   |LC 0630-1430 (8.0)
                |CP 1430-1530 (1.0)
