--- a/roster.html
+++ b/roster.html
@@ -200,7 +200,8 @@ B3 ROSTER
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 26/06, 08:41)   Draft #1</span>
+<b>Changelog</b> -  #2 (Sun 27/06, 10:33)   Draft #2
+             #1 (Sat 26/06, 08:41)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -362,10 +363,13 @@ Mon - Fri
 
 -->
 Pla: Monday and Wednesday only
+Bea: Away Monday
 
 Mon - Fri
           = |LC 0700-0730 (0.5)
             |CP 0730-1530 (8.0)
+ 
+          - |LC 0630-1430 (8.0)
 |==========================================================================|
 | For week starting    Mon        26/06/2021                               |
 |==========================================================================|
@@ -374,12 +378,12 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Pla=       Sean=      Vechy=     Bea=       Vechy=  |
+| b    0700-1430|7.5   Pla=       Sean=      Pla=       Bea=       Vechy=  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1500|8.5   Bea        Madi       Madi       Madi       Bea     |
+| e    0630-1500|8.5   Vechy-     Madi       Madi       Madi       Bea-    |
 |                                                                          |
 |==========================================================================|
 
