--- a/roster.html
+++ b/roster.html
@@ -200,7 +200,8 @@ B3 ROSTER
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 27/06, 13:08)   [Pending Confirmation] &#x1F6CE
+<b>Changelog</b> -  #4 (Sun 27/06, 13:38)   Draft #3
+             #3 (Sun 27/06, 13:08)   [Pending Confirmation] &#x1F6CE
              #2 (Sun 27/06, 10:33)   Draft #2
              #1 (Sat 26/06, 08:41)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -379,7 +380,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Pla=       Sean=      Pla=       Bea=       Vechy=  |
+| b    0700-1430|7.5   Pla=       Sean=      Bea=       Bea=       Vechy=  |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
