--- a/roster.html
+++ b/roster.html
@@ -193,14 +193,15 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b> 
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b> 
              COVID timetable 
              <!-- [Final] &#x2705
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Sun 27/06, 13:38)   Draft #3
+<b>Changelog</b> -  #5 (Sun 27/06, 14:24)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
+             #4 (Sun 27/06, 13:38)   Draft #3
              #3 (Sun 27/06, 13:08)   [Pending Confirmation] &#x1F6CE
              #2 (Sun 27/06, 10:33)   Draft #2
              #1 (Sat 26/06, 08:41)   Draft #1</span>
