--- a/roster.html
+++ b/roster.html
@@ -200,7 +200,8 @@ B3 ROSTER
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Sun 27/06, 14:24)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #6 (Thu 01/07, 19:44)   Changed next week's roster
+             #5 (Sun 27/06, 14:24)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
              #4 (Sun 27/06, 13:38)   Draft #3
              #3 (Sun 27/06, 13:08)   [Pending Confirmation] &#x1F6CE
              #2 (Sun 27/06, 10:33)   Draft #2
@@ -398,12 +399,12 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Pla=       Sean=      Pla=       Bea=       Vechy=  |
+| b    0700-1430|7.5   Pla=       Sean=      Pla=       Pla=       Pla=    |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1500|8.5   Bea        Madi       Madi       Madi       Bea     |
+| e    0630-1500|8.5   Vechy      Madi       Madi       Madi       Vechy   |
 |                                                                          |
 |==========================================================================|
 
