--- a/roster.html
+++ b/roster.html
@@ -377,7 +377,7 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Pla=       Sean=      Pla=       Pla=       Pla=    |
+| b    0700-1430|7.5   Pla=       Sean=      Vechy=     Pla=       Pla=    |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
