--- a/roster.html
+++ b/roster.html
@@ -192,15 +192,17 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft <<</mark></b> 
-             Pending Confirmation
+<b>Status</b> -     Draft
+          <b><mark>>> Pending Confirmation <<</mark></b> 
              Final
              COVID timetable 
              <!-- [Final] &#x2705
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 03/07, 14:24)   Draft #1</span>
+<b>Changelog</b> -  #2 (Sun 04/07, 14:24)   [Pending Confirmation]
+                                     Draft #2
+             #1 (Sat 03/07, 14:24)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -361,23 +363,41 @@ Mon - Fri
 
 
 -->
-Pla: Monday and Wednesday only
-
 Mon - Fri
-          = |LC 0700-0730 (0.5)
+          + |LC 0700-0730 (0.5)
             |CP 0730-1530 (8.0)
- 
+          
+          ^ |CP 0800-1530 (7.5)
+         
           - |LC 0630-1430 (8.0)
 
 |==========================================================================|
-| For week starting    Mon        05/07/2021    DRAFT                      |
+| For week starting    Mon        05/07/2021                               |
 |==========================================================================|
 | Pos   Time           Mon        Tue        Wed        Thu        Fri     |
 |--------------------------------------------------------------------------|
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Pla=       Sean=      Vechy=     Pla=       Pla=    |
+| b    0700-1430|7.5   Pla^       Sean+      Vechy+     Pla^       Pla^    |
+| c    1030-1530|5.0   /          /          /          /          /       |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1500|8.5   Vechy-     Madi       Madi       Madi       Vechy-  |
+|                                                                          |
+|==========================================================================|
+
+Sean: Can only work Fridays from this week
+|==========================================================================|
+| For week starting    Mon        12/07/2021    DRAFT                      |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0700-1430|7.5   Pla^       Pla^       Vechy+     Pla^       Sean+   |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
