--- a/roster.html
+++ b/roster.html
@@ -397,7 +397,7 @@ Sean: Can only work Fridays from this week
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Pla^       Pla^       Vechy+     Pla^       Sean+   |
+| b    0700-1430|7.5   /          Pla^       Vechy+     Pla^       Sean+   |
 | c    1030-1530|5.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
