--- a/roster.html
+++ b/roster.html
@@ -200,7 +200,8 @@ B3 ROSTER
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 04/07, 09:00)   [Pending Confirmation] &#x1F6CE
+<b>Changelog</b> -  #3 (Sun 04/07, 12:21)   [Final] &#x2705 <span id = "paraChangelog" style = "display:none"> 
+             #2 (Sun 04/07, 09:00)   [Pending Confirmation] &#x1F6CE
                                      Draft #2
              #1 (Sat 03/07, 14:24)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
