--- a/roster.html
+++ b/roster.html
@@ -380,8 +380,8 @@ Mon - Fri
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   Pla^       Sean+      Vechy+     Pla^       Pla^    |
-| c    1030-1530|5.0   /          /          /          /          /       |
+| b    0700-1530|8.5   Pla^       Sean+      Vechy+     Pla^       Pla^    |
+| c    1030-1430|4.0   Rei        /          /          Rei        /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
@@ -398,8 +398,8 @@ Sean: Can only work Fridays from this week
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5   /          Pla^       Vechy+     Pla^       Sean+   |
-| c    1030-1530|5.0   /          /          /          /          /       |
+| b    0700-1530|8.5   /          Pla^       Vechy+     Pla^       Sean+   |
+| c    1030-1430|4.0   Rei        /          /          Rei        /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
