--- a/roster.html
+++ b/roster.html
@@ -209,15 +209,15 @@ B3 ROSTER
 <div id = "priceList" style = "display:none">
              <b> Employee price list </b>
                  <b> (price - $1.0)</b>
-                 Baguette (p) -        $4.00
-                 Baguette (g) -        $6.00
+                 Baguette (p) -        $4.50
+                 Baguette (g) -        $6.50
 
                  <b> (price - $0.5)</b>
                  Donuts -              $1.50
                  Muffins -             $2.50
                  Cake slices -         $2.50
                  Coke bottles,
-                  Red Bull, V, etc -   $3.00
+                  Red Bull, V, etc -   $3.50
                  Coke cans -           $1.00
 
 </div>
@@ -282,9 +282,6 @@ B3 ROSTER
              so please double check your morning preparations and if
              you're taking longer than a minute or two to get ready
              once you arrive, then you should wake up earlier.
-
-             <a href=b3-roster-notes.html>b3-roster-notes.html</a>
-
 
             <mark style="background-color:#FF9090;"> <b>7. When you're late to work  </b></mark>
              ... everyone else is affected. Last week, too many
@@ -381,8 +378,8 @@ Friday
     Sean   + |LC 0630-0730 (1.0)
              |CP 0730-1530 (8.0)
 
--- News -- 
-Welcome Maya to B3 Cafe !! (:
+-- News --  
+&#x2705 &#x1F929 Welcome Maya to B3 Cafe !! (: &#x1F929 &#x2705 
 
 Sean: Can only work Fridays from this week
 |==========================================================================|
@@ -398,7 +395,7 @@ Sean: Can only work Fridays from this week
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Vechy&     Madi       Madi       Madi       Vechy-  |
+| e    0630-1430|8.0   Vechy&     Madi       Madi       Madi       Vechy   |
 |                                                                          |
 |==========================================================================|
 
