--- a/roster.html
+++ b/roster.html
@@ -379,7 +379,7 @@ Friday
              |CP 0730-1530 (8.0)
 
 -- News --  
-&#x1F308&#x1F929 Welcome Maya to B3 Cafe !! (: &#x1F929&#x1F308
+&#x1F320&#x1F308&#x1F929 Welcome Maya to B3 Cafe !! (: &#x1F320&#x1F929&#x1F308
 
 Sean: Can only work Fridays from this week
 |==========================================================================|
