--- a/roster.html
+++ b/roster.html
@@ -409,125 +409,14 @@ Vechy: Can only work Mon and Fri from this week
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1530|8.5   Maya       Pla^       Maya       Pla^       Sean+   |
-| c    1030-1430|4.0   Rei        Maya       /          Rei        Maya    |
+| c    1030-1430|4.0   Rei        Maya       []         Rei        Maya    |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Vechy-     Madi       Madi       Madi       Vechy-  |
+| e    0630-1430|8.0   Vechy      Madi       Madi       Madi       Vechy   |
 |                                                                          |
 |==========================================================================|
 
-<!--
-Mon   ^ Sean   |LC 0630-1430 (8.0)
-               |CP 1430-1530 (1.0)
-      & Millie  |LC 0700-0730 (0.5)
-                |CP 0700-1500 (8.0)
-
-Tue   ^ Sean   |LC 0630-1430 (8.0)
-               |CP 1430-1530 (1.0)
-      - Pla   |CP 1100-1500 (4.0)
-      
-Wed   * Millie  |LC 0700-0730 (0.5)
-                |CP 0700-1530 (8.5)
-      = Pla    |CP 1100-1430 (3.5)
-
-|==========================================================================|
-| For week starting    Mon   24/05/2021                                    |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       /       |
-| b    0630-1430|8.0~  Pla+       Sean      <del>Pla</del>Bea!     Vechy      /       |
-| c    1030-1530|5.0   Rei-       Bea        /          /          /       |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Bea        Madi       Madi       Madi       Nere    |
-|                                                                          |
-|==========================================================================|
-
-
-Lucy: Can't work this week
-|==========================================================================|
-| For week starting    Mon   22/02/2021                                    |
-|==========================================================================|
-| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
-|--------------------------------------------------------------------------|
-|==========================================================================|
-|       CP                                                                 |
-| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1430|7.5~  Millie&    Bea        Millie*    Millie     Millie  |
-| c    1100-1530|4.5   /          Pla-       Pla=       Pla        Pla     |
-|                                                                          |
-|       LC                                                                 |
-| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
-| e    0630-1430|8.0   Sean^      Sean^      Bea        Bea        Bea     |
-|                                                                          |
-|==========================================================================|-->
-<!--
-
-
-For this week
-Millie  31.5 - 23.5 = 8 ($168)
-Bea     23.0 - 23.5 = -0.5 ($0)
-Pla     16.5 (297)
-
-For previous week
-Millie  PAID
-Bea     4 (84)
-Sean    0
-Lucy    PAID
-
-Plah
-Mon, Tue, Fri -- All day 
-Wed- Day off
-Thu must finish 1430
-
-
-_______________________________________________________________________
------------------- start PREV week ------------------------------------
-
-Wed   & Millie |CP 0730-1500 (7.5)
-      $ Bea   |LC 0700-1200 (5.0)
-      ^ Lucy  |LC 1030-1430 (4.0)
-              |CP 1430-1530 (1.0)
-
-Thu   @ Millie |CP 0700-1530 (8.5)
-      @ Sean  |CP 0700-1530 (8.5) 
-
-Fri   # Millie |LC 0530-0730 (2.0)
-               |CP 0730-1530 (8.0)
-      # Sean  |LC 0530-0730 (2.0)
-              |CP 0730-1530 (8.0)    
-      + Bea    |LC 0630-1430 (8.0)
-|=====================================================================|
-| For week starting    Mon   18/01/2021                               |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0730-1530|      Nere      Nere      Nere    Sean@  <del>Nere</del>Millie# |
-| b    0730-1530|8.0   Bea      Millie  Mill&/Lucy^  Millie@  Sean#   |
-| c    1030-1530|5.0   /         /         /         /        /       |
-|                                                                     |
-|       LC                                                            |
-| d    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1430|7.5   Sean      Bea     Bea$/Lucy^  Lucy     Bea     |
-|                                                                     |
-|=====================================================================|
-_______________________________________________________________________
---------------------- end PREV week ----------------------------------- 
-
-
-
---><!--
-Millie 34 - 23 = 11 (231)
-Sean 26- 23    = 3  (63)
-Bea 28.5- 23   = 5.5 (115.5)
--->
 </em>
 </span></span></div>
 </pre>
