--- a/roster.html
+++ b/roster.html
@@ -192,15 +192,17 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -  <b><mark>>> Draft <<</mark></b> 
-             Pending Confirmation
+<b>Status</b> -     Draft
+          <b><mark>>> Pending Confirmation <<</mark></b> 
              Final
              COVID timetable 
              <!-- [Final] &#x2705
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 10/07, 19:11)   Draft #1</span>
+<b>Changelog</b> -  #2 (Sun 11/07, 08:11)   [Pending Confirmation]
+                                     Draft #2
+             #1 (Sat 10/07, 19:11)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 <!--
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, --><!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><!--<a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>-->
@@ -392,6 +394,7 @@ Sean: Can only work Fridays from this week
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1530|8.5   Maya*      Pla^       Vechy+     Pla^       Sean+   |
 | c    1030-1430|4.0   Rei        Maya       Maya       Rei        []      |
+| tr   1030-1430|4.0   /          /          /          Muoy       Muoy    |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
