--- a/roster.html
+++ b/roster.html
@@ -200,7 +200,9 @@ B3 ROSTER
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 11/07, 08:11)   [Pending Confirmation] &#x1F6CE
+<b>Changelog</b> -  #3 (Sun 11/07, 13:08)   [Final]&#x2705<span id = "paraChangelog" style = "display:none">
+                                     Draft #3
+             #2 (Sun 11/07, 08:11)   [Pending Confirmation] &#x1F6CE
                                      Draft #2
              #1 (Sat 10/07, 19:11)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -393,8 +395,8 @@ Sean: Can only work Fridays from this week
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
 | b    0700-1530|8.5   Maya*      Pla^       Vechy+     Pla^       Sean+   |
-| c    1030-1430|4.0   Rei        Maya       Maya       Rei        []      |
-| tr   1030-1430|4.0   /          /          /          Muoy       Muoy    |
+| c    1030-1430|4.0   Rei        Maya       Maya       Rei        Maya    |
+| tr   1030-1430|4.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
