--- a/roster.html
+++ b/roster.html
@@ -200,8 +200,8 @@ B3 ROSTER
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 11/07, 13:08)   [Final]&#x2705<span id = "paraChangelog" style = "display:none">
-                                     Draft #3
+<b>Changelog</b> -  #3 (Sun 11/07, 13:25)   [Final]&#x2705<span id = "paraChangelog" style = "display:none"></span>
+             #3 (Sun 11/07, 13:08)   Draft #3
              #2 (Sun 11/07, 08:11)   [Pending Confirmation] &#x1F6CE
                                      Draft #2
              #1 (Sat 10/07, 19:11)   Draft #1</span>
