--- a/roster.html
+++ b/roster.html
@@ -193,14 +193,14 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft
-          <b><mark>>> Pending Confirmation <<</mark></b> 
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b> 
              COVID timetable 
              <!-- [Final] &#x2705
                   [Pending Confirmation] &#x1F6CE
                   ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 
      <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 11/07, 13:25)   [Final]&#x2705<span id = "paraChangelog" style = "display:none"></span>
+<b>Changelog</b> -  #3 (Sun 11/07, 13:25)   [Final] &#x2705<span id = "paraChangelog" style = "display:none">
              #3 (Sun 11/07, 13:08)   Draft #3
              #2 (Sun 11/07, 08:11)   [Pending Confirmation] &#x1F6CE
                                      Draft #2
