--- a/roster.html
+++ b/roster.html
@@ -405,6 +405,7 @@ Sean: Can only work Fridays from this week
 |==========================================================================|
 
 Vechy: Can only work Mon and Fri from this week
+Pla:   Can only work Tue and Fri from this week
 |==========================================================================|
 | For week starting    Mon        19/07/2021    DRAFT                      |
 |==========================================================================|
@@ -413,8 +414,9 @@ Vechy: Can only work Mon and Fri from this week
 |==========================================================================|
 |       CP                                                                 |
 | a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
-| b    0700-1530|8.5   Maya       Pla^       Maya       Pla^       Sean+   |
-| c    1030-1430|4.0   Rei        Maya       []         Rei        Maya    |
+| b    0700-1530|8.5   Maya       Pla^       Maya       Maya       Sean<   |
+| c    1030-1430|4.0   Rei        Maya       []         Rei        Pla%    |
+| tr   1030-1430|4.0   /          /          /          /          /       |
 |                                                                          |
 |       LC                                                                 |
 | d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
